feat: set up and play/pause functionality
- Setup entry.tp file for TouchPortal plugin convensions.
- App setup so that YouTube Music Desktop and Touch Portal can communicate.
- Added Play/Pause functionality

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,7 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+Touch_Portal_YTMD_Plugin/
+TouchPortalYTMDPlugin/
+ytmd_plugin_v2/
