--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,8 @@ dist
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
+# added by me
 Touch_Portal_YTMD_Plugin/
 TouchPortalYTMDPlugin/
 ytmd_plugin_v2/
+bundlePlugin.sh 
