feat: Added Like and Dislike functionality
- Added the ability for user to Like and Dislike a song/video

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist",
-    "build": "npm run clean && npx tsc"
+    "build": "npm run clean && npx tsc",
+    "watch": "npx tsc --watch"
   },
   "devDependencies": {
     "@types/node": "^20.19.31",
