--- a/package.json
+++ b/package.json
@@ -14,14 +14,24 @@
   "author": "Carlos Carbajal",
   "type": "commonjs",
   "main": "index.js",
+  "bin": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist",
     "build": "npm run clean && npx tsc",
-    "watch": "npx tsc --watch"
+    "watch": "npx tsc --watch",
+    "version": "node scripts/versionSync.js && git add entry.tp"
+  },
+  "pkg": {
+    "assets":[
+      "package.json",
+      "node_modules/touchportal-api/**/*"
+    ]
   },
   "devDependencies": {
     "@types/node": "^20.19.31",
+    "archiver": "^7.0.1",
+    "fs-extra": "^11.3.3",
     "typescript": "^4.9.5"
   },
   "dependencies": {
