--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "type": "commonjs",
   "main": "index.js",
   "bin": "dist/index.js",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf ./dist",
