fix: Fixed entry.tp path in the npm version script
- Fixed the entry.tp path in the npm version to be config/entry.tp

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "clean": "rm -rf ./dist",
     "build": "npm run clean && npx tsc",
     "watch": "npx tsc --watch",
-    "version": "node scripts/versionSync.js && git add entry.tp"
+    "version": "node scripts/versionSync.js && git add config/entry.tp"
   },
   "pkg": {
     "assets":[
