fix: adding branches for build runner for PRs
-- added missing branches["main"] so that the `tpp` file gets generated
for the PR for validation.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,10 @@ on:
   push:
     tags:
       - 'v*'
-          
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+            
 permissions:
   contents: write
   
@@ -31,6 +34,7 @@ jobs:
         run: node scripts/build.js
       
       - name: Release Plugin
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           files: ./*tpp
