refactor: ytmdClient and touchPortalClient refactor
- refactored `ytmdClient.ts`
  - changed construtor to have host and port passed in as parameters.
  - rewrote how the `syncNewAuthToken` handles getting a new token.

- refactored `touchPortalClient.ts`
  - extracted the constants into `tpConstants.ts`
  - changed return type of the client to `InstanceType<typeof
    TouchPortalApi.Client>`

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/bcarbajal23/touchportal-ytmd-plugin-v2.git"
   },
-  "license": "ISC",
+  "license": "GPL-3.0",
   "author": "Carlos Carbajal",
   "type": "commonjs",
   "main": "index.js",
